# id_factory

./: Cargo.toml  README.md
src/: lib.rs  typed.rs  untyped.rs
src/typed/: factory.rs  id.rs  sync_factory.rs
src/untyped/: factory.rs  id.rs  sync_factory.rs
