[package]
name = "id_factory"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A library for creating typed id numbers."
readme = "README.md"
documentation = "https://docs.rs/id_factory"

repository = "https://github.com/Kimundi/id_factory"
keywords = ["id", "number"]
categories = []
exclude = ["/.travis.yml", "/appveyor.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
#appveyor = { repository = "Kimundi/id_factory" }
#travis-ci = { repository = "Kimundi/id_factory" }

is-it-maintained-issue-resolution = { repository = "Kimundi/id_factory" }
is-it-maintained-open-issues = { repository = "Kimundi/id_factory" }

maintenance = { status = "as-is" }
